--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cucumber": "6.0.5",
     "protractor-cucumber-framework": "6.2.1",
     "ts-node": "8.10.2",
-    "typescript": "3.4.3"
+    "typescript": "3.4.3",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1"
   }
 }
