--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Initial Framework setup for cucumber",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "protractor JSFiles/Configuration.js",
+    "pretest":"tsc",
+    "protractor":"./node_modules/protractor/built/cli.js",
+    "webdriver-update":"./node_modules/.bin/webdriver-manager update"
   },
   "author": "Abhishek Thakur",
   "license": "ISC",
@@ -17,6 +20,8 @@
     "ts-node": "8.10.2",
     "typescript": "3.4.3",
     "chai": "4.2.0",
-    "chai-as-promised": "7.1.1"
+    "chai-as-promised": "7.1.1",
+    "cucumber-html-reporter": "5.2.0",
+    "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1"
   }
 }
